--- a/project/Application/Home/View/Common/footer.html
+++ b/project/Application/Home/View/Common/footer.html
@@ -1,2 +1,11 @@
-  <div class="footer width_max">Copyright©2010-2014 liuliangbao.cn All Rights Reserved. 流量云 - 浙ICP备12019862号<br /> 
-<a href="">联系我们</a> - <a href="">加入我们</a> - <a href="">问题反馈</a> - <a href="">关于我们</a> - <a href="">免费刷流量软件</a> - <a href="">免费刷Alexa排名</a> - <a href="">QQ空间刷人气</a></div>
+ <!--_footer 作为公共模版分离出去-->
+<script type="text/javascript" src="/lib/jquery/1.9.1/jquery.min.js"></script> 
+<script type="text/javascript" src="/lib/layer/2.1/layer.js"></script> 
+<script type="text/javascript" src="/lib/icheck/jquery.icheck.min.js"></script> 
+<script type="text/javascript" src="/lib/jquery.validation/1.14.0/jquery.validate.min.js"></script> 
+<script type="text/javascript" src="/lib/jquery.validation/1.14.0/validate-methods.js"></script> 
+<script type="text/javascript" src="/lib/jquery.validation/1.14.0/messages_zh.min.js"></script> 
+<script type="text/javascript" src="/static/h-ui/js/H-ui.js"></script> 
+<script type="text/javascript" src="/static/h-ui/js/H-ui.admin.js"></script> 
+<script type="text/javascript" src="/static/h-ui/js/comment.js"></script>
+<!--/_footer /作为公共模版分离出去--> 
