--- a/project/Application/Home/View/Common/header.html
+++ b/project/Application/Home/View/Common/header.html
@@ -1,15 +1,31 @@
-  <div class="top width_max"><div class="width_thousand">
-          <dl><{if !$passport}><li><a href="/login" class="gay">登录</a>-<a href="/register" class="gay">注册</a></li><{else}><li class="myself"><a href="" class="gay">我的流量宝</a></li><{/if}><li><a href="" class="gay">帮助中心</a></li></dl>
-          <dt><{$smarty.now|date_format:'%Y-%m-%d'}></dt>
-  </div></div>
-  <div class="header width_max"><div class="width_thousand">
-    <div class="nav_user">
-      <dl><a href="" title="QQ在线咨询" style="background:url(images/btn003.jpg);width:130px;height:44px;"></a><a href="" title="收费标准" style="background:url(images/btn002.jpg);width:50px;height:44px;" class="popbox-link"></a></dl>
-      <dt><a href="/home/task" class="<{if $controllerName eq 'task'}>orange bold<{else}>blue_01<{/if}>">任务管理</a>｜<a href="/home/account" class="<{if $controllerName eq 'account'}>orange bold<{else}>blue_01<{/if}>">账户管理</a>｜<a href="/home/product/lists" class="<{if $controllerName eq 'product'}>orange bold<{else}>blue_01<{/if}>">账户充值</a>｜<a href="" class="blue_01">常见问题</a>｜<a href="/home/invite" class="<{if $controllerName eq 'invite'}>orange bold<{else}>blue_01<{/if}>">邀请返利</a><{if $passport}>｜<a href="/logout" class="blue_01">退出登录</a><{/if}></dt></div>
-    <div class="logo"><a href="/"></a></div>
-    <div class="kouhao denone">专业流量提供商</div>
-  </div></div>
-  
-  <div class="location width_max"><div class="width_thousand">
-          <span>任务IP总量：<font class="bold yellow">0/400,000</font></span>欢迎您，<font class="yellow fweight"><{$passport.loginname}></font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;帐户余额：<font class="yellow bold"><{$click_account.clicks}></font>点  <a href="/home/product/lists" class="green bold">充点</a>
-  </div></div>
+<!--_header 作为公共模版分离出去-->
+<header class="navbar-wrapper">
+    <div class="navbar navbar-fixed-top">
+        <div class="container-fluid cl"> <a class="logo navbar-logo f-l mr-10 hidden-xs" href="index.html">H-ui.admin</a> <a class="logo navbar-logo-m f-l mr-10 visible-xs" href="index.html">H-ui</a> <span class="logo navbar-slogan f-l mr-10 hidden-xs">v2.4</span> <a aria-hidden="false" class="nav-toggle Hui-iconfont visible-xs" href="javascript:;">&#xe667;</a>
+            <nav id="Hui-userbar" class="nav navbar-nav navbar-userbar hidden-xs">
+                <ul class="cl">
+                    <li>超级管理员</li>
+                    <li class="dropDown dropDown_hover"> <a href="#" class="dropDown_A">admin <i class="Hui-iconfont">&#xe6d5;</i></a>
+                        <ul class="dropDown-menu menu radius box-shadow">
+                            <li><a href="personInfo.html">个人信息</a></li>
+                            <li><a href="login.html">切换账户</a></li>
+                            <li><a href="#">退出</a></li>
+                        </ul>
+                    </li>
+                    <li id="Hui-msg"> <a href="#" title="消息"><span class="badge badge-danger">1</span><i class="Hui-iconfont" style="font-size:18px">&#xe68a;</i></a> </li>
+                    <li id="Hui-skin" class="dropDown right dropDown_hover"> <a href="javascript:;" class="dropDown_A" title="换肤"><i class="Hui-iconfont" style="font-size:18px">&#xe62a;</i></a>
+                        <ul class="dropDown-menu menu radius box-shadow">
+                            <li><a href="javascript:;" data-val="default" title="默认（黑色）">默认（黑色）</a></li>
+                            <li><a href="javascript:;" data-val="blue" title="蓝色">蓝色</a></li>
+                            <li><a href="javascript:;" data-val="green" title="绿色">绿色</a></li>
+                            <li><a href="javascript:;" data-val="red" title="红色">红色</a></li>
+                            <li><a href="javascript:;" data-val="yellow" title="黄色">黄色</a></li>
+                            <li><a href="javascript:;" data-val="orange" title="绿色">橙色</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+<!--/_header 作为公共模版分离出去-->
