--- a/project/Application/Home/View/Common/footer.html
+++ b/project/Application/Home/View/Common/footer.html
@@ -8,4 +8,5 @@
 <script type="text/javascript" src="/static/h-ui/js/H-ui.js"></script> 
 <script type="text/javascript" src="/static/h-ui/js/H-ui.admin.js"></script> 
 <script type="text/javascript" src="/static/h-ui/js/comment.js"></script>
+<script type="text/javascript" src="/static/common.js"></script>
 <!--/_footer /作为公共模版分离出去--> 
