--- a/project/Application/Home/View/Index/login.html
+++ b/project/Application/Home/View/Index/login.html
@@ -81,9 +81,11 @@
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/jquery.validate.min.js"></script> 
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/validate-methods.js"></script> 
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/messages_zh.min.js"></script> 
+<script type="text/javascript" src="/static/common.js"></script>
 
 <script type="text/javascript">
 $(function(){
+    //全局方法
     $("#login").validate({
         rules:{
             loginname:{
@@ -102,10 +104,13 @@ $(function(){
         focusCleanup:true,
         success:"valid",
         submitHandler:function(form){
+            send('/home/index/verify', $(form).serialize(), 'post');
+            /*
             $(form).ajaxSubmit();
             var index = parent.layer.getFrameIndex(window.name);
             parent.$('.btn-refresh').click();
             parent.layer.close(index);
+            */
         }
     });
 });
