--- a/project/Application/Home/View/Index/register.html
+++ b/project/Application/Home/View/Index/register.html
@@ -87,6 +87,7 @@
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/jquery.validate.min.js"></script> 
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/validate-methods.js"></script> 
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/messages_zh.min.js"></script> 
+<script type="text/javascript" src="/static/common.js"></script>
 
 <script type="text/javascript">
 $(function(){
