--- a/project/Application/Home/View/Shop/index.html
+++ b/project/Application/Home/View/Shop/index.html
@@ -71,8 +71,8 @@
 <{/block}>
 
 <{block 'footer_script'}>
-<script type="text/javascript" src="/static/lib/jquery.provincesCity.js"></script>
-<script type="text/javascript" src="/static/lib/provincesData.js"></script>
+<script type="text/javascript" src="/lib/jquery.provincesCity.js"></script>
+<script type="text/javascript" src="/lib/provincesData.js"></script>
 <script type="text/javascript">
 $("#menu-shop dt").addClass("selected");
 $("#menu-shop dd").show();
