--- a/project/Application/Home/View/Index/login.html
+++ b/project/Application/Home/View/Index/login.html
@@ -77,6 +77,7 @@
 </div>
 <div class="footer">Copyright 你的公司名称</div>
 <script type="text/javascript" src="/lib/jquery/1.9.1/jquery.min.js"></script> 
+<script type="text/javascript" src="/lib/layer/2.1/layer.js"></script> 
 <script type="text/javascript" src="/static/h-ui/js/H-ui.js"></script> 
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/jquery.validate.min.js"></script> 
 <script type="text/javascript" src="/lib/jquery.validation/1.14.0/validate-methods.js"></script> 
