--- a/project/Application/Home/View/Invite/index.html
+++ b/project/Application/Home/View/Invite/index.html
@@ -4,31 +4,105 @@
 <{/block}>
 
 <{block 'content'}>
-<div class="fanli width_thousand">
-    <div class="title font_blue01 jianglijizhi">奖励机制</div>
-    <div class="fanlist">
-      <li class="jizhi"><span class="font_blue01">• 邀请会员成功开通、续费会员，您将获得：</span><p>&nbsp;&nbsp;&nbsp;&nbsp;6个月奖励：<font class="font14 bold font_orange">60元</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;9个月奖励：<font class="font14 bold font_blue02">90元</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1年奖励：<font class="font14 bold font_blue02">108元</font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2年奖励：<font class="font14 bold font_blue02">199元</font></p></li>
-      <li class="jizhi"><span class="font_blue01">•  · 邀请的会员每次购买积分，根据购买的积分您将获得相应的奖励，如下：</span>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;邀请会员支付<font class="font_orange">1,000元</font>购买积分，可获得奖励<font class="font14 bold font_blue02">100元</font></p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;邀请会员支付<font class="font_orange">1,000元</font>购买积分，可获得奖励<font class="font14 bold font_blue02">100元</font></p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;邀请会员支付<font class="font_orange">1,000元</font>购买积分，可获得奖励<font class="font14 bold font_blue02">100元</font></p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;邀请会员支付<font class="font_orange">1,000元</font>购买积分，可获得奖励<font class="font14 bold font_blue02">100元</font></p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;邀请会员支付<font class="font_orange">1,000元</font>购买积分，可获得奖励<font class="font14 bold font_blue02">100元</font></p>
-        <p>&nbsp;&nbsp;&nbsp;&nbsp;邀请会员支付<font class="font_orange">1,000元</font>购买积分，可获得奖励<font class="font14 bold font_blue02">100元</font></p>
-      </li>
-      <li class="copy"><span class="font_blue02 font14">邀请链接：</span><div><input name="invite_url" type="text" value="<{$inviteUrl}>" style="width:350px;border:1px solid #c9c9c9;background:#fff;height:28px;font-size:14px; line-height:28px;"></div><div><input type="button" value="复制链接" name="" style="border:none;display:block;background:#2381bd; cursor:pointer;width:80px;height:32px;color:#fff;font:14px '微软雅黑';"></div></li>
+<section class="Hui-article-box">
+    <nav class="breadcrumb"><i class="Hui-iconfont"></i> <a href="/" class="maincolor">首页</a> <span class="c-999 en">&gt;</span><span class="c-666">邀请好友</span> <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
+    <div class="Hui-article">
+        <article class="cl pd-20">
+            <div class="panel panel-default mt-20">
+                <div class="panel-header">邀请好友注册</div>
+                <div class="panel-body">
+                    <textarea maxlength="300" id="copyUrl" rows="10" cols="70">最靠谱的信誉提升平台，推荐你加入，还有会员送哟：<{$inviteUrl}></textarea>
+                    <div><input type="button" id="copyBtn" value="复制邀请链接">(如果点击无响应，请手工复制)</div>
+                </div>
+            </div>
+            <div class="panel panel-default mt-20">
+                <div class="panel-header">我邀请到的好友</div>
+                <div class="panel-body">
+                    <ul class="taskFilterPanel clearfix">
+                        <li><span class="fl ml20">好友身份:</span>
+                            <span class="select-box inline">
+                                    <select name="" class="select friendIdentify">
+                                        <option value="all">全部</option>
+                                        <option value＝"buyer">买手</option>
+                                        <option value＝"seller">商家</option>
+                                    </select>
+                                </span> 
+                        </li>
+                        <li><span class="fl ml20">昵称:</span><input class="input-smalltext" type="text" ></li>
+                        <li><span class="fl ml20">QQ:</span><input class="input-smalltext" type="text" ></li>
+                        <li><span class="fl ml20">好友状态:</span>
+                            <span class="select-box inline">
+                                    <select name="" class="select friendStatus">
+                                        <option value="all">全部</option>
+                                        <option value＝"inactive">注册后未激活</option>
+                                        <option value＝"active">已激活，尚未开通会员</option>
+                                        <option value＝"valid">注册后开通会员</option>
+                                        <option value＝"invalid">会员过期</option>
+                                        <option value＝"locked">账号被冻结</option>
+                                    </select>
+                                </span> 
+                        </li>                       
+                        <li><span class="fl ml20">注册时间:</span>
+                            <input type="text" onfocus="WdatePicker({maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}'})" id="logmin" class="input-text Wdate" style="width:120px;">
+                            -
+                            <input type="text" onfocus="WdatePicker({minDate:'#F{$dp.$D(\'logmin\')}',maxDate:'%y-%M-%d'})" id="logmax" class="input-text Wdate" style="width:120px;">
+                        </li>
+                        <li><button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i>查询</button></li>
+                    </ul>
+                    <table class="table table-border table-bordered table-bg mt-20">
+                        <thead>
+                            <tr class="text-c">
+                                <th>昵称</th>
+                                <th>身份</th>
+                                <th>QQ</th>
+                                <th>状态</th>
+                                <th>注册时间</th>
+                                <th>充值会员时间</th>
+                                <th>获得奖励金币</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="text-c">
+                                <td>Lin1126</td>
+                                <td>买手</td>
+                                <td>653167256</td>
+                                <td>会员已过期</td>
+                                <td>2015-03-20 15：00：01</td>
+                                <td>----</td>
+                                <td>----</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </article>
     </div>
-    
-    <div class="clear"></div>
-    <div class="title font_blue01 allquestion">常见问题</div>
-    <div class="fanlist">
-      <li class="question"><span class="font_blue01">• 邀请会员成功开通、续费会员，您将获得：</span><p>&nbsp;&nbsp;&nbsp;&nbsp;答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账个工作日内到账</p></li>
-      <li class="question"><span class="font_blue01">• 邀请会员成功开通、续费会员，您将获得：</span><p>&nbsp;&nbsp;&nbsp;&nbsp;答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账个工作日内到账</p></li>
-      <li class="question"><span class="font_blue01">• 邀请会员成功开通、续费会员，您将获得：</span><p>&nbsp;&nbsp;&nbsp;&nbsp;答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账个工作日内到账</p></li>
-      <li class="question"><span class="font_blue01">• 邀请会员成功开通、续费会员，您将获得：</span><p>&nbsp;&nbsp;&nbsp;&nbsp;答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账个工作日内到账</p></li>
-      <li class="question"><span class="font_blue01">• 邀请会员成功开通、续费会员，您将获得：</span><p>&nbsp;&nbsp;&nbsp;&nbsp;答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账个工作日内到账</p></li>
-      <li class="question"><span class="font_blue01">• 邀请会员成功开通、续费会员，您将获得：</span><p>&nbsp;&nbsp;&nbsp;&nbsp;答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账答：根据活动规则，邀请会员获得的奖励，将会直接发放到您的流量符账户；奖励满200元后可申请提现，申请提现后2个工作日内到账个工作日内到账</p></li>
-    </div>
-    
-  </div>
+</section>
+<{/block}>
+
+<{block 'footer_script'}>
+<script type="text/javascript" src="/lib/My97DatePicker/WdatePicker.js"></script> 
+<script type="text/javascript" src="/lib/ZeroClipboard.js"></script>
+<script type="text/javascript">
+    $("#menu-invite dt").addClass("selected");
+    $("#menu-invite dd").show();
+    $("#menu-invite li").addClass("current");
+
+    $(function(){
+        //init();
+        function init() {
+            ZeroClipboard.setMoviePath( '/static/h-ui/ZeroClipboard.swf' );  //和html不在同一目录需设置setMoviePath
+            var clip = new ZeroClipboard.Client(); // 新建一个对象
+            clip.setHandCursor( true );
+            clip.setText($('#copyUrl').val()); // 设置要复制的文本。
+            clip.addEventListener( "mouseUp", function(client) {
+                alert("复制成功！");
+            });
+            // 注册一个 button，参数为 id。点击这个 button 就会复制。
+            //这个 button 不一定要求是一个 input 按钮，也可以是其他 DOM 元素。
+            clip.glue("copyBtn"); // 和上一句位置不可调换
+        }
+        $.Huitab("#tab .tabBar span","#tab .tabCon","current","click","0");
+    });
+</script> 
 <{/block}>
