--- a/project/Application/Home/View/Common/menu.html
+++ b/project/Application/Home/View/Common/menu.html
@@ -99,7 +99,7 @@
                 <dt><i class="Hui-iconfont">&#xe62b;</i> 邀请好友<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="invite.html" title="邀请好友">邀请好友</a></li>
+                        <li><a href="/home/invite" title="邀请好友">邀请好友</a></li>
                     </ul>
                 </dd>
             </dl>
