--- a/project/Application/Home/View/Index/register.html
+++ b/project/Application/Home/View/Index/register.html
@@ -64,7 +64,7 @@
             <div class="row cl">
                 <label class="form-label col-xs-3"><i class="Hui-iconfont">&#xe70c;</i></label>
                 <div class="formControls col-xs-8">
-                    <input class="input-text size-L" type="text" placeholder="验证码" style="width:150px;">
+                    <input name="verify_code" class="input-text size-L" type="text" placeholder="验证码" style="width:150px;">
                     <img id="captcha" src="/home/captcha" height="35px" width="120px"> <a id="kanbuq" href="javascript:void(0);">看不清，换一张</a> </div>
             </div>
             <div class="row cl">
