--- a/project/Application/Home/View/Common/menu.html
+++ b/project/Application/Home/View/Common/menu.html
@@ -115,7 +115,7 @@
                 <dt><i class="Hui-iconfont">&#xe691;</i> 意见建议<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="suggest.html" title="意见建议">意见建议</a></li>
+                        <li><a href="/home/feedback" title="意见建议">意见建议</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -123,7 +123,7 @@
                 <dt><i class="Hui-iconfont">&#xe63c;</i> 个性设置<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="sellconfig.html" title="个性设置">个性设置</a></li>
+                        <li><a href="/home/setting" title="个性设置">个性设置</a></li>
                     </ul>
                 </dd>
             </dl>
