--- a/project/Application/Home/View/Common/menu.html
+++ b/project/Application/Home/View/Common/menu.html
@@ -83,7 +83,7 @@
                 <dt><i class="Hui-iconfont">&#xe63a;</i> 资金管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="money.html" title="资金管理">资金管理</a></li>
+                        <li><a href="/home/money" title="资金管理">资金管理</a></li>
                     </ul>
                 </dd>
             </dl>
@@ -91,7 +91,7 @@
                 <dt><i class="Hui-iconfont">&#xe628;</i> 提现管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
                 <dd>
                     <ul>
-                        <li><a href="withdraw.html" title="提现管理">提现管理</a></li>
+                        <li><a href="/home/withdraw" title="提现管理">提现管理</a></li>
                     </ul>
                 </dd>
             </dl>
