--- a/project/Application/Home/View/Shop/index.html
+++ b/project/Application/Home/View/Shop/index.html
@@ -56,7 +56,7 @@
                                 <td><{$shop.sender_province}>-<{$shop.sender_city}>-<{$shop.sender_district}></td>
                                 <td><{$shop.sender_code}></td>
                                 <td><a class="maincolor" href="<{$shop.shop_url}>"><{$shop.shop_url}></a></td>
-                                <td><a class="btn btn-success" href="javascript:;" onclick="bindShop(this,'10001')">修改店铺信息</a></td>
+                                <td><a data-id="<{$shop.id}>" class="btn btn-success" href="javascript:;" onclick="bindShop(this,'10001')">修改店铺信息</a></td>
                             </tr>
                             <{foreachelse}>
                             <tr class="text-c">
