--- a/project/Application/Home/View/Shop/index.html
+++ b/project/Application/Home/View/Shop/index.html
@@ -56,7 +56,7 @@
                                 <td><{$shop.sender_province}>-<{$shop.sender_city}>-<{$shop.sender_district}></td>
                                 <td><{$shop.sender_code}></td>
                                 <td><a class="maincolor" href="<{$shop.shop_url}>"><{$shop.shop_url}></a></td>
-                                <td><a class="btn btn-success" href="javascript:;" onclick="bindShop(this,'10001')">修改店铺信息</a></td>
+                                <td><a class="btn btn-success shopModify" href="javascript:;">修改店铺信息</a></td>
                             </tr>
                             <{foreachelse}>
                             <tr class="text-c">
@@ -76,9 +76,9 @@
 <script type="text/javascript" src="/lib/jquery.provincesCity.js"></script>
 <script type="text/javascript" src="/lib/provincesData.js"></script>
 <script type="text/javascript">
-$("#menu-shop dt").addClass("selected");
-$("#menu-shop dd").show();
-$("#menu-shop li").addClass("current");
+    $("#menu-shop dt").addClass("selected");
+    $("#menu-shop dd").show();
+    $("#menu-shop li").addClass("current");
     $(function(){   
         $('.choosebox li a').click(function(){
             var thisToggle = $(this).is('.platform_radioToggle') ? $(this) : $(this).prev();
@@ -88,6 +88,17 @@ $("#menu-shop li").addClass("current");
             thisToggle.addClass('current');
             return false;
         });        
+    });
+    $(".shopModify").on('click',function(){
+        $.ajax({
+            type: "GET",
+             url: "/home/shop/getinfo",
+             data: {id:2},
+             dataType: "json",
+             success: function(data){
+
+             }
+        })
     });
     function bindShop(obj,id){
        // alert(JSON.stringiy());
